--- a/value_founded.html
+++ b/value_founded.html
@@ -197,7 +197,7 @@
         </div>
     </div>
     <div class="core-value">
-        <div class="visual" style="background-image:url(../ak/images/img_core_value.png)">
+        <div class="visual">
             <strong class="tit">핵심가치</strong>
         </div>
         <ul class="core-value-list">
