--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -168,7 +168,7 @@
         <h2 class="tit"><span class="tk-arboria">Corporate Identity</span></h2>
         <p class="desc">브랜드 이미지를 시각적으로 표현하고 있습니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_introduce.png)">
+    <div class="visual intro has-tab" style="background-image:url(../ak/images/img_introduce.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
