--- a/value_management.html
+++ b/value_management.html
@@ -222,9 +222,24 @@
     </div>
 </div>
 <!--//본문영역-->
-<footer class="footer">
-    <div class="inner"></div>
+<footer>
+    <div class="info">
+        <h1><a href="#">AK홀딩스(주)</a></h1>
+        <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
+    </div>
+    <div class="link">
+        <p>
+            <a href="#">오시는 길</a>
+            <em></em>
+            <a href="#">법적고지</a>
+            <em></em>
+            <a href="#">Contact IR</a>
+        </p>
+    </div>
 </footer>
-
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous"></script>
+<script src="./js/common.js"></script>
 </body>
 </html>
