--- a/esg_news.html
+++ b/esg_news.html
@@ -168,7 +168,7 @@
         <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
         <p class="desc">기업과 사회가 공존하는<br class="mo">ESG 관련 소식을 전달합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
+    <div class="visual" style="background-image:url(/images/img_esgNews.png)"></div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
