--- a/esg_news_detail.html
+++ b/esg_news_detail.html
@@ -168,7 +168,7 @@
         <h2 class="tit">애경뉴스</h2>
         <p class="desc">애경의 주요한 소식을 한눈에 확인하세요</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
+    <div class="visual" style="background-image:url(/images/img_esgNews.png)"></div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
