--- a/financial_income.html
+++ b/financial_income.html
@@ -173,7 +173,7 @@
         <h2 class="tit">재무정보</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_financial.png)"></div>
+    <div class="visual" style="background-image:url(/images/img_financial.png)"></div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
