--- a/financial_income2020.html
+++ b/financial_income2020.html
@@ -260,7 +260,7 @@
                             </tr>
                             <tr>
                                 <th>기타자본항목</th>
-                                <td>(5,498)</td>
+                                <td class="txtc-skyblue">(5,498)</td>
                             </tr>
                             <tr>
                                 <th>기타포괄손익누계액</th>
