--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -198,20 +198,29 @@
                             </colgroup>
                             <thead>
                             <tr>
-                            <tr class="total">
                                 <th>매출</th>
                                 <td>3,1667,700</td>
                             </tr>
                             </thead>
+                            <tbody>
                             <tr>
                                 <th>매출원가</th>
                                 <td>2,661,296</td>
                             </tr>
-                            <tbody>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>매출총이익</th>
                                 <td>506,431</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>판매비와관리비</th>
                                 <td>672,146</td>
@@ -223,11 +232,13 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
-                                <td>(165,715)</td>
+                                <td class="txtc-skyblue">(165,715)</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>금융수익</th>
                                 <td>33,060</td>
@@ -255,28 +266,40 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
-                                <td>(247,644)</td>
+                                <td class="txtc-skyblue">(247,644)</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
-                                <td>(48,318)</td>
+                                <td class="txtc-skyblue">(48,318)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>당기순이익</th>
-                                <td>(199,326)</td>
+                                <td class="txtc-skyblue">(199,326)</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>기타포괄손익</th>
                                 <td>10,252</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
-                                <td>(189,074)</td>
+                                <td class="txtc-skyblue">(189,074)</td>
                             </tr>
                             </tfoot>
                         </table>
@@ -292,54 +315,66 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업수익</th>
                                 <td>51,865</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업비용</th>
-                                <td>(14,562)</td>
+                                <td class="txtc-skyblue">(14,562)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>37,303</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업외손익</th>
-                                <td>(11,573)</td>
+                                <td class="txtc-skyblue">(11,573)</td>
                             </tr>
-                            </tfoot>
+                            </tbody>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>25,730</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
-                                <td>(4)</td>
+                                <td class="txtc-skyblue">(4)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>25,734</td>
-                            </tr>
-                            </tfoot>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td>25,734</td>
+                            </tr>
+                            </thead>
                             <tbody>
                             <tr>
                                 <th>기타포괄손익</th>
