--- a/financial_statement2019.html
+++ b/financial_statement2019.html
@@ -206,25 +206,16 @@
                                 <col width="*">
                             </colgroup>
                             <thead>
-                                <tr>
-                                <tr class="total">
-                                    <th>매출</th>
-                                    <td>3,759,542</td>
-                                </tr>
+                            <tr>
+                                <th>매출</th>
+                                <td>3,759,542</td>
+                            </tr>
                             </thead>
-                                <tr>
-                                    <th>매출원가</th>
-                                    <td>2,832,480</td>
-                                </tr>
                             <tbody>
-                                <tr>
-                                    <th>매출총이익</th>
-                                    <td>927,062</td>
-                                </tr>
-                                <tr>
-                                    <th>판매비와관리비</th>
-                                    <td>795,725</td>
-                                </tr>
+                            <tr>
+                                <th>매출원가</th>
+                                <td>2,832,480</td>
+                            </tr>
                             </tbody>
                         </table>
                         <table class="tbl-finance">
@@ -232,11 +223,31 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>매출총이익</th>
+                                <td>927,062</td>
+                            </tr>
+                            </thead>
                             <tbody>
+                            <tr>
+                                <th>판매비와관리비</th>
+                                <td>795,725</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>131,337</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>금융수익</th>
                                 <td>44,366</td>
@@ -264,25 +275,37 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>82,275</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
                                 <td>23,529</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>당기순이익</th>
                                 <td>58,746</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(12,144)</td>
+                                <td class="txtc-skyblue">(12,144)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>46,602</td>
@@ -301,58 +324,73 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업수익</th>
                                 <td>33,948</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업비용</th>
-                                <td>(13,695)</td>
+                                <td class="txtc-skyblue">(13,695)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
-                            <tr>
-                                <th>영업이익</th>
-                                <td>20,253</td>
-                            </tr>
-                            <tr>
-                                <th>영업외손익</th>
-                                <td>(1,388)</td>
-                            </tr>
-                            </tfoot>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>영업이익</th>
+                                <td>20,253</td>
+                            </tr>
+                            </thead>
                             <tbody>
+                            <tr>
+                                <th>영업외손익</th>
+                                <td class="txtc-skyblue">(1,388)</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>18,865</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
                                 <td>144</td>
                             </tr>
                             </tbody>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>18,721</td>
-                            </tr>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td>18,721</td>
+                            </tr>
+                            </thead>
                             <tbody>
-                            <tfoot>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(498)</td>
+                                <td class="txtc-skyblue">(498)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>18,223</td>
