--- a/financial_statement2020.html
+++ b/financial_statement2020.html
@@ -207,24 +207,15 @@
                             </colgroup>
                             <thead>
                                 <tr>
-                                <tr class="total">
                                     <th>매출</th>
                                     <td>2,619,977</td>
                                 </tr>
                             </thead>
-                                <tr>
-                                    <th>매출원가</th>
-                                    <td>2,157,042</td>
-                                </tr>
                             <tbody>
-                                <tr>
-                                    <th>매출총이익</th>
-                                    <td>462,935</td>
-                                </tr>
-                                <tr>
-                                    <th>판매비와관리비</th>
-                                    <td>684,490</td>
-                                </tr>
+                            <tr>
+                                <th>매출원가</th>
+                                <td>2,157,042</td>
+                            </tr>
                             </tbody>
                         </table>
                         <table class="tbl-finance">
@@ -232,11 +223,31 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>매출총이익</th>
+                                <td>462,935</td>
+                            </tr>
+                            </thead>
                             <tbody>
                             <tr>
-                                <th>영업이익</th>
-                                <td>(221,555)</td>
+                                <th>판매비와관리비</th>
+                                <td>684,490</td>
                             </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
+                            <tr>
+                                <th>영업이익</th>
+                                <td class="txtc-skyblue">(221,555)</td>
+                            </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>금융수익</th>
                                 <td>24,772</td>
@@ -264,28 +275,40 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
-                                <td>(344,060)</td>
+                                <td class="txtc-skyblue">(344,060)</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
-                                <td>(79,749)</td>
+                                <td class="txtc-skyblue">(79,749)</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td class="txtc-skyblue">(264,311)</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th>기타포괄손익</th>
+                                <td class="txtc-skyblue">(7,864)</td>
                             </tr>
                             </tbody>
                             <tfoot>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>(264,311)</td>
-                            </tr>
-                            <tr>
-                                <th>기타포괄손익</th>
-                                <td>(7,864)</td>
-                            </tr>
                             <tr class="total">
                                 <th>총포괄이익</th>
-                                <td>(272,175)</td>
+                                <td class="txtc-skyblue">(272,175)</td>
                             </tr>
                             </tfoot>
                         </table>
@@ -301,58 +324,73 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업수익</th>
                                 <td>45,515</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업비용</th>
-                                <td>(13,902)</td>
+                                <td class="txtc-skyblue">(13,902)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
-                            <tr>
-                                <th>영업이익</th>
-                                <td>31,613</td>
-                            </tr>
-                            <tr>
-                                <th>영업외손익</th>
-                                <td>(21,930)</td>
-                            </tr>
-                            </tfoot>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>영업이익</th>
+                                <td>31,613</td>
+                            </tr>
+                            </thead>
                             <tbody>
+                            <tr>
+                                <th>영업외손익</th>
+                                <td class="txtc-skyblue">(21,930)</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>9,683</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
                                 <td>257</td>
                             </tr>
                             </tbody>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>9,426</td>
-                            </tr>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td>9,426</td>
+                            </tr>
+                            </thead>
                             <tbody>
-                            <tfoot>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(894)</td>
+                                <td class="txtc-skyblue">(894)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>8,532</td>
