--- a/financial_statement2018.html
+++ b/financial_statement2018.html
@@ -206,25 +206,16 @@
                                 <col width="*">
                             </colgroup>
                             <thead>
-                                <tr>
-                                <tr class="total">
-                                    <th>매출</th>
-                                    <td>3,711,183</td>
-                                </tr>
+                            <tr>
+                                <th>매출</th>
+                                <td>3,711,183</td>
+                            </tr>
                             </thead>
-                                <tr>
-                                    <th>매출원가</th>
-                                    <td>2,665,568</td>
-                                </tr>
                             <tbody>
-                                <tr>
-                                    <th>매출총이익</th>
-                                    <td>1,045,615</td>
-                                </tr>
-                                <tr>
-                                    <th>판매비와관리비</th>
-                                    <td>775,897</td>
-                                </tr>
+                            <tr>
+                                <th>매출원가</th>
+                                <td>2,665,568</td>
+                            </tr>
                             </tbody>
                         </table>
                         <table class="tbl-finance">
@@ -232,11 +223,31 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>매출총이익</th>
+                                <td>1,045,615</td>
+                            </tr>
+                            </thead>
                             <tbody>
+                            <tr>
+                                <th>판매비와관리비</th>
+                                <td>775,897</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>269,718</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>금융수익</th>
                                 <td>39,557</td>
@@ -264,25 +275,37 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>271,081</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
                                 <td>63,182</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>당기순이익</th>
                                 <td>207,899</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(9,272)</td>
+                                <td class="txtc-skyblue">(9,272)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>198,627</td>
@@ -301,58 +324,73 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업수익</th>
                                 <td>33,693</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업비용</th>
-                                <td>(13,085)</td>
+                                <td class="txtc-skyblue">(13,085)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>20,608</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업외손익</th>
                                 <td>870</td>
                             </tr>
-                            </tfoot>
+                            </tbody>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>21,478</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
-                                <td>(220)</td>
+                                <td class="txtc-skyblue">(220)</td>
                             </tr>
                             </tbody>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>21,698</td>
-                            </tr>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td>21,698</td>
+                            </tr>
+                            </thead>
                             <tbody>
-                            <tfoot>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(68)</td>
+                                <td class="txtc-skyblue">(68)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>21,630</td>
