--- a/financial_statement2017.html
+++ b/financial_statement2017.html
@@ -206,25 +206,16 @@
                                 <col width="*">
                             </colgroup>
                             <thead>
-                                <tr>
-                                <tr class="total">
-                                    <th>매출</th>
-                                    <td>3,392,455</td>
-                                </tr>
+                            <tr>
+                                <th>매출</th>
+                                <td>3,392,455</td>
+                            </tr>
                             </thead>
-                                <tr>
-                                    <th>매출원가</th>
-                                    <td>2,328,176</td>
-                                </tr>
                             <tbody>
-                                <tr>
-                                    <th>매출총이익</th>
-                                    <td>1,064,279</td>
-                                </tr>
-                                <tr>
-                                    <th>판매비와관리비</th>
-                                    <td>789,638</td>
-                                </tr>
+                            <tr>
+                                <th>매출원가</th>
+                                <td>2,328,176</td>
+                            </tr>
                             </tbody>
                         </table>
                         <table class="tbl-finance">
@@ -232,11 +223,31 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>매출총이익</th>
+                                <td>1,064,279</td>
+                            </tr>
+                            </thead>
                             <tbody>
+                            <tr>
+                                <th>판매비와관리비</th>
+                                <td>798,638</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>265,641</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>금융수익</th>
                                 <td>18,348</td>
@@ -264,25 +275,37 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>241,880</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
                                 <td>55,271</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>당기순이익</th>
                                 <td>186,609</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>기타포괄손익</th>
-                                <td>(9,474)</td>
+                                <td class="txtc-skyblue">(9,474)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
                                 <td>177,135</td>
@@ -301,61 +324,76 @@
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>영업수익</th>
                                 <td>28,130</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업비용</th>
-                                <td>(9,977)</td>
+                                <td class="txtc-skyblue">(9,977)</td>
                             </tr>
                             </tbody>
-                            <tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <thead>
                             <tr>
                                 <th>영업이익</th>
                                 <td>18,153</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>영업외손익</th>
-                                <td>(1,049)</td>
+                                <td class="txtc-skyblue">(1,049)</td>
                             </tr>
-                            </tfoot>
+                            </tbody>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th>법인세비용차감전이익</th>
                                 <td>17,104</td>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <th>법인세비용</th>
-                                <td>(9)</td>
+                                <td class="txtc-skyblue">(9)</td>
                             </tr>
                             </tbody>
-                            <tr>
-                                <th>당기순이익</th>
-                                <td>17,113</td>
-                            </tr>
                         </table>
                         <table class="tbl-finance">
                             <colgroup>
                                 <col width="60%">
                                 <col width="*">
                             </colgroup>
+                            <thead>
+                            <tr>
+                                <th>당기순이익</th>
+                                <td>17,113</td>
+                            </tr>
+                            </thead>
                             <tbody>
-                            <tfoot>
                             <tr>
                                 <th>기타포괄손익</th>
                                 <td>110</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr class="total">
                                 <th>총포괄이익</th>
-                                <td>17,223</td>
+                                <td>17,223 </td>
                             </tr>
                             </tfoot>
                         </table>
