--- a/financial_cash2020.html
+++ b/financial_cash2020.html
@@ -208,11 +208,11 @@
                             <tbody>
                                 <tr>
                                     <th>영업활동으로 인한 현금흐름</th>
-                                    <td>(191,716)</td>
+                                    <td class="txtc-skyblue">(191,716)</td>
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(18,567)</td>
+                                    <td class="txtc-skyblue">(18,567)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
@@ -238,11 +238,11 @@
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 환율변동으로 인한 효과</th>
-                                <td>(2,954)</td>
+                                <td class="txtc-skyblue">(2,954)</td>
                             </tr>
                             <tr>
                                 <th>연결대상범위의 변동으로인한 현금의 증감</th>
-                                <td>(168)</td>
+                                <td class="txtc-skyblue">(168)</td>
                             </tr>
                             </tbody>
                             <tfoot>
@@ -271,16 +271,26 @@
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(76,665)</td>
+                                <td class="txtc-skyblue">(76,665)</td>
                             </tr>
                             <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
                                 <td>52,289</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
-                                <td>(4,176)</td>
+                                <td>4,176</td>
                             </tr>
+                            </tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
                                 <td>2,422</td>
