--- a/financial_cash2017.html
+++ b/financial_cash2017.html
@@ -212,17 +212,17 @@
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(292,513)</td>
+                                    <td class="txtc-skyblue">(292,513)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
-                                    <td>(39,325)</td>
+                                    <td class="txtc-skyblue">(39,325)</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>현금 및 현금성 자산의 증감</th>
-                                    <td>(50,904)</td>
+                                    <td class="txtc-skyblue">(50,904)</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -238,7 +238,7 @@
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 환율변동으로 인한 효과</th>
-                                <td>(7,293)</td>
+                                <td class="txtc-skyblue">(7,293)</td>
                             </tr>
                             <tr>
                                 <th>연결대상범위의 변동으로인한 현금의 증감</th>
@@ -271,16 +271,26 @@
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(5,158)</td>
+                                <td class="txtc-skyblue">(5,158)</td>
                             </tr>
                             <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
-                                <td>(6,609)</td>
+                                <td class="txtc-skyblue">(6,609)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
                                 <td>512</td>
                             </tr>
+                            </tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
                                 <td>1,826</td>
