--- a/financial_cash2018.html
+++ b/financial_cash2018.html
@@ -212,7 +212,7 @@
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(224,602)</td>
+                                    <td class="txtc-skyblue">(224,602)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
@@ -238,11 +238,11 @@
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 환율변동으로 인한 효과</th>
-                                <td>(669)</td>
+                                <td class="txtc-skyblue">(669)</td>
                             </tr>
                             <tr>
                                 <th>연결대상범위의 변동으로인한 현금의 증감</th>
-                                <td>(919)</td>
+                                <td class="txtc-skyblue">(919)</td>
                             </tr>
                             </tbody>
                             <tfoot>
@@ -271,16 +271,26 @@
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(3,772)</td>
+                                <td class="txtc-skyblue">(3,772)</td>
                             </tr>
                             <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
-                                <td>(11,678)</td>
+                                <td class="txtc-skyblue">(11,678)</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
                                 <td>313</td>
                             </tr>
+                            </tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
                                 <td>2,338</td>
