--- a/financial_cash2019.html
+++ b/financial_cash2019.html
@@ -212,17 +212,17 @@
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(219,324)</td>
+                                    <td class="txtc-skyblue">(219,324)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
-                                    <td>(295,492)</td>
+                                    <td class="txtc-skyblue">(295,492)</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>현금 및 현금성 자산의 증감</th>
-                                    <td>(240,626)</td>
+                                    <td class="txtc-skyblue">(240,626)</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -271,16 +271,26 @@
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(60,385)</td>
+                                <td class="txtc-skyblue">(60,385)</td>
                             </tr>
                             <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
                                 <td>41,234</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
-                                <td>(229)</td>
+                                <td class="txtc-skyblue">(229)</td>
                             </tr>
+                            </tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
                                 <td>2,651</td>
