--- a/financial_cash2021.html
+++ b/financial_cash2021.html
@@ -208,11 +208,11 @@
                             <tbody>
                                 <tr>
                                     <th>영업활동으로 인한 현금흐름</th>
-                                    <td>(9,766)</td>
+                                    <td class="txtc-skyblue">(9,766)</td>
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(38,244)</td>
+                                    <td class="txtc-skyblue">(38,244)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
@@ -271,17 +271,27 @@
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(108,600)</td>
+                                <td class="txtc-skyblue">(108,600)</td>
                             </tr>
                             <tr>
                             <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
                                 <td>66,092</td>
                             </tr>
+                            </tbody>
+                            <tfoot>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
-                                <td>(6,598)</td>
+                                <td class="txtc-skyblue">(6,598)</td>
                             </tr>
+                            </tfoot>
+                        </table>
+                        <table class="tbl-finance">
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
                                 <td>6,598</td>
